tests/ui/where-clauses/where-equality-constraints.stderr
error: equality constraints are not yet supported in `where` clauses
  --> $DIR/where-equality-constraints.rs:1:14
   |
LL | fn f() where u8 = u16 {}
   |              ^^^^^^^^ not supported
   |
   = note: see issue #20041 <https://github.com/rust-lang/rust/issues/20041> for more information

error: equality constraints are not yet supported in `where` clauses
  --> $DIR/where-equality-constraints.rs:3:14
   |
LL | fn g() where for<'a> &'static (u8,) == u16, {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not supported
   |
   = note: see issue #20041 <https://github.com/rust-lang/rust/issues/20041> for more information

error: aborting due to 2 previous errors

